gcc/testsuite/gdc.test/compilable/imports/test2991.d
module imports.test2991;

private void foo()
{
}
