gcc/testsuite/gdc.test/fail_compilation/imports/dip22d.d
module imports.dip22d;

private struct Foo {}
private void foo() {}
private void bar() {}
